# SE3Diff

./: .gitignore  .gitmodules  README.md  bioemu.ipynb  finetune.sh  pyproject.toml  sample.sh  se3diff.ipynb  setup.sh
bioemu-benchmarks/bioemu_benchmarks/eval/folding_free_energies/: analysis.py
bioemu/src/bioemu/: chemgraph.py  convert_chemgraph.py  denoiser.py  finetune.py  get_embeds.py  model_utils.py  ppft.py  sample.py  shortcuts.py
bioemu/src/bioemu/config/denoiser/: dpm.yaml  dpm_finetune.yaml
bioemu/src/bioemu/config/finetune/: finetune.yaml
bioemu/src/bioemu/config/h_func/: folding_stability.yaml
bioemu/src/bioemu/observables/: folding_stability.py
src/se3diff/: __init__.py  finetune.py
tex/: example_paper.bbl  example_paper.bib  example_paper.tex
